syntax ="proto3";

package example.complex;

option go_package = "./ProtoCourse";

message Dummy1{
    int32 id =1;
    string name = 2;
}

message Complex{
    Dummy1 one_dummy = 1;
    repeated Dummy1 multi_dummies = 2;
}
